src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginDecorator.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

	<Decorator
  HorizontalAlignment="Left"
  VerticalAlignment="Top"
  Height="450"
  Width="450"
  Margin="-33">

		<Button Content="Button"/>

	</Decorator>

</Grid>
